--- a/templates/form.html
+++ b/templates/form.html
@@ -8,16 +8,23 @@
 
     <form method="POST">
       <input type="text" name="nombre" placeholder="Nombre" required /><br />
+
+      <input type="number" step="0.01" name="precio" min="0" required /><br />
+
       <input
         type="number"
-        step="0.01"
-        name="precio"
-        placeholder="Precio"
+        name="stock"
+        min="0"
+        placeholder="Stock"
         required
       /><br />
+
+      <label> <input type="checkbox" name="activo" checked /> Activo </label
+      ><br />
+
       <button type="submit">Guardar</button>
     </form>
 
-    <a href="/">Volver</a>
+    <a href="/index">Volver</a>
   </body>
 </html>
