Agregar un nuevo campo a una tabla

--- a/templates/products.html
+++ b/templates/products.html
@@ -16,6 +16,7 @@
         <div><strong>Precio:</strong> ${{ p[2] }}</div>
         <div><strong>Stock:</strong> {{ p[3] }}</div>
         <div><strong>Activo:</strong> {{ 'Sí' if p[4] else 'No' }}</div>
+        <div><strong>Categoria:</strong> {{ p[5] }}</div>
 
         <div>
           <a href="/editar/{{ p[0] }}">Editar</a>
