--- a/templates/form.html
+++ b/templates/form.html
@@ -9,7 +9,14 @@
     <form method="POST">
       <input type="text" name="nombre" placeholder="Nombre" required /><br />
 
-      <input type="number" step="0.01" name="precio" min="0" required /><br />
+      <input
+        type="number"
+        step="0.01"
+        placeholder="Precio"
+        name="precio"
+        min="0"
+        required
+      /><br />
 
       <input
         type="number"
@@ -21,10 +28,12 @@
 
       <label> <input type="checkbox" name="activo" checked /> Activo </label
       ><br />
+      <label for="categoria">Categoria:</label>
+      <input type="text" name="categoria" placeholder="Categoria" /><br />
 
       <button type="submit">Guardar</button>
     </form>
 
-    <a href="/index">Volver</a>
+    <a href="/productos">Volver</a>
   </body>
 </html>
