--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
     </a>
 
     <a
-      href="/agregar"
+      href="/crear"
       style="
         text-decoration: none;
         color: white;
