--- a/templates/login.html
+++ b/templates/login.html
@@ -57,7 +57,7 @@
       {%- endif -%}
 
       <form
-        action="{{ url_for('login') }}"
+        action="{{ url_for('products.login') }}"
         method="post"
         style="display: flex; flex-direction: column"
       >
