--- a/templates/products.html
+++ b/templates/products.html
@@ -84,7 +84,7 @@
           <div style="flex: 1; color: #999">{{ p[5] }}</div>
 
           <div style="flex: 1; color: #e94560; font-weight: bold">
-            ${{ p[2] }}
+            ${{ p[2] }}<small style="color: #666"> MXN </small>
           </div>
 
           <div style="flex: 1">
@@ -96,7 +96,7 @@
                 font-size: 0.9rem;
               "
             >
-              {{ p[3] }} <small style="color: #666">mxn</small>
+              {{ p[3] }} <small style="color: #666"> </small>
             </span>
           </div>
 
